Add inline counter

--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -14335,7 +14335,135 @@
                                                                             "
                                                                           ></div>
                                                                         </div>
-                                                                        <div></div>
+<div id="inline-counter" class="hidden">
+  <div class="_r2ourjn" aria-labelledby="GuestPicker-book_it-form" tabindex="-1">
+    <div class="_ysga5k">
+      <div class="_1y5b6gl">
+        <div role="group" class="_1m4zger" aria-labelledby="GuestPicker-book_it-form-adults"
+          aria-describedby="GuestPicker-book_it-form-adults-subtitle">
+          <div class="_bc4egv">
+            <div id="GuestPicker-book_it-form-adults" class="_1ynrq4v">Adults</div>
+            <div id="GuestPicker-book_it-form-adults-subtitle" class="_1wh7hnv">Age 13+</div>
+          </div>
+          <div class="_jro6t0">
+            <div class="_3zlfom" id="GuestPicker-book_it-form-adults-stepper"><button class="_ul9u8c" type="button"
+                disabled="" aria-label="subtract"
+                data-testid="GuestPicker-book_it-form-adults-stepper-decrease-button"><span class="_8ovatg"><svg
+                    viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
+                    focusable="false"
+                    style="display: block; fill: none; height: 12px; width: 12px; stroke: currentcolor; stroke-width: 5.33333; overflow: visible;">
+                    <path d="m2 16h28"></path>
+                  </svg></span></button>
+              <div class="_1665lvv"><span aria-hidden="true"
+                  data-testid="GuestPicker-book_it-form-adults-stepper-value">1</span><span class="_25sktq"
+                  data-testid="GuestPicker-book_it-form-adults-stepper-a11y-value-label">1 adult</span></div><button
+                class="_ul9u8c" type="button" aria-label="add"
+                data-testid="GuestPicker-book_it-form-adults-stepper-increase-button"><span class="_8ovatg"><svg
+                    viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
+                    focusable="false"
+                    style="display: block; fill: none; height: 12px; width: 12px; stroke: currentcolor; stroke-width: 5.33333; overflow: visible;">
+                    <path d="m2 16h28m-14-14v28"></path>
+                  </svg></span></button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="_1estb9n">
+        <div role="group" class="_1m4zger" aria-labelledby="GuestPicker-book_it-form-children"
+          aria-describedby="GuestPicker-book_it-form-children-subtitle">
+          <div class="_bc4egv">
+            <div id="GuestPicker-book_it-form-children" class="_1ynrq4v">Children</div>
+            <div id="GuestPicker-book_it-form-children-subtitle" class="_1wh7hnv">Ages 2–12</div>
+          </div>
+          <div class="_jro6t0">
+            <div class="_3zlfom" id="GuestPicker-book_it-form-children-stepper"><button class="_ul9u8c" type="button"
+                disabled="" aria-label="subtract"
+                data-testid="GuestPicker-book_it-form-children-stepper-decrease-button"><span class="_8ovatg"><svg
+                    viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
+                    focusable="false"
+                    style="display: block; fill: none; height: 12px; width: 12px; stroke: currentcolor; stroke-width: 5.33333; overflow: visible;">
+                    <path d="m2 16h28"></path>
+                  </svg></span></button>
+              <div class="_1665lvv"><span aria-hidden="true"
+                  data-testid="GuestPicker-book_it-form-children-stepper-value">0</span><span class="_25sktq"
+                  data-testid="GuestPicker-book_it-form-children-stepper-a11y-value-label">0 children</span></div>
+              <button class="_ul9u8c" type="button" aria-label="add"
+                data-testid="GuestPicker-book_it-form-children-stepper-increase-button"><span class="_8ovatg"><svg
+                    viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
+                    focusable="false"
+                    style="display: block; fill: none; height: 12px; width: 12px; stroke: currentcolor; stroke-width: 5.33333; overflow: visible;">
+                    <path d="m2 16h28m-14-14v28"></path>
+                  </svg></span></button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="_1estb9n">
+        <div role="group" class="_1m4zger" aria-labelledby="GuestPicker-book_it-form-infants"
+          aria-describedby="GuestPicker-book_it-form-infants-subtitle">
+          <div class="_bc4egv">
+            <div id="GuestPicker-book_it-form-infants" class="_1ynrq4v">Infants</div>
+            <div id="GuestPicker-book_it-form-infants-subtitle" class="_1wh7hnv">Under 2</div>
+          </div>
+          <div class="_jro6t0">
+            <div class="_3zlfom" id="GuestPicker-book_it-form-infants-stepper"><button class="_ul9u8c" type="button"
+                disabled="" aria-label="subtract"
+                data-testid="GuestPicker-book_it-form-infants-stepper-decrease-button"><span class="_8ovatg"><svg
+                    viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
+                    focusable="false"
+                    style="display: block; fill: none; height: 12px; width: 12px; stroke: currentcolor; stroke-width: 5.33333; overflow: visible;">
+                    <path d="m2 16h28"></path>
+                  </svg></span></button>
+              <div class="_1665lvv"><span aria-hidden="true"
+                  data-testid="GuestPicker-book_it-form-infants-stepper-value">0</span><span class="_25sktq"
+                  data-testid="GuestPicker-book_it-form-infants-stepper-a11y-value-label">0 infants</span></div><button
+                class="_ul9u8c" type="button" aria-label="add"
+                data-testid="GuestPicker-book_it-form-infants-stepper-increase-button"><span class="_8ovatg"><svg
+                    viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
+                    focusable="false"
+                    style="display: block; fill: none; height: 12px; width: 12px; stroke: currentcolor; stroke-width: 5.33333; overflow: visible;">
+                    <path d="m2 16h28m-14-14v28"></path>
+                  </svg></span></button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="_1estb9n">
+        <div role="group" class="_1m4zger" aria-labelledby="GuestPicker-book_it-form-pets"
+          aria-describedby="GuestPicker-book_it-form-pets-subtitle">
+          <div class="_bc4egv">
+            <div id="GuestPicker-book_it-form-pets" class="_1ynrq4v">Pets</div>
+            <div id="GuestPicker-book_it-form-pets-subtitle" class="_1wh7hnv"><button type="button"
+                class="_15rpys7s">Bringing a service animal?</button></div>
+          </div>
+          <div class="_jro6t0">
+            <div class="_3zlfom" id="GuestPicker-book_it-form-pets-stepper"><button class="_ul9u8c" type="button"
+                disabled="" aria-label="subtract"
+                data-testid="GuestPicker-book_it-form-pets-stepper-decrease-button"><span class="_8ovatg"><svg
+                    viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
+                    focusable="false"
+                    style="display: block; fill: none; height: 12px; width: 12px; stroke: currentcolor; stroke-width: 5.33333; overflow: visible;">
+                    <path d="m2 16h28"></path>
+                  </svg></span></button>
+              <div class="_1665lvv"><span aria-hidden="true"
+                  data-testid="GuestPicker-book_it-form-pets-stepper-value">0</span><span class="_25sktq"
+                  data-testid="GuestPicker-book_it-form-pets-stepper-a11y-value-label">0 pets</span></div><button
+                class="_ul9u8c" type="button" disabled="" aria-label="add"
+                data-testid="GuestPicker-book_it-form-pets-stepper-increase-button"><span class="_8ovatg"><svg
+                    viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
+                    focusable="false"
+                    style="display: block; fill: none; height: 12px; width: 12px; stroke: currentcolor; stroke-width: 5.33333; overflow: visible;">
+                    <path d="m2 16h28m-14-14v28"></path>
+                  </svg></span></button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="_2x2gkbi">This place has a maximum of 16 guests, not including infants. Pets aren't allowed.</div>
+    </div>
+    <div class="_1jdtwz4"><button data-button="close" type="button" class="_za4ekfm">Close</button></div>
+  </div>
+</div>
                                                                       </div>
                                                                     </div>
                                                                   </div>
@@ -15299,7 +15427,7 @@
                   </path>
                 </svg></span></button></div>
           <div class="_1sl8tba"><button type="button" class="_1e5q4qoz">Clear dates</button><span
-              class="_sbaj1v"><button data-testid="availability-calendar-save" type="button"
+              class="_sbaj1v"><button data-button="close" data-testid="availability-calendar-save" type="button"
                 class="_1lerwp6l">Close</button></span></div>
         </div>
       </div>
