add try an online link

--- a/listings-product/explore-where.html
+++ b/listings-product/explore-where.html
@@ -960,6 +960,58 @@
                                                     </div>
                                                   </div>
                                                 </div>
+
+<div class="dir dir-ltr">
+  <div class="c1la5te7 dir dir-ltr">
+    <a
+      href="/s?refinement_paths%5B%5D=%2Fexperiences%2FKG%2FTag%3A6951"
+      class="_11eqlma4"
+      ><div class="r1faj5sg dir dir-ltr">
+        <div class="lbkkije dir dir-ltr">
+          <svg
+            viewBox="0 0 32 32"
+            xmlns="http://www.w3.org/2000/svg"
+            aria-hidden="true"
+            role="presentation"
+            focusable="false"
+            style="
+              display: block;
+              height: 23px;
+              width: 23px;
+              fill: currentcolor;
+            "
+          >
+            <path
+              d="M27 3a2 2 0 0 1 1.995 1.85L29 5l-.001 14.816 2.43 6.482a2 2 0 0 1-.881 2.44l-.145.074-.144.06a2 2 0 0 1-.523.12l-.179.008H2.443a2 2 0 0 1-1.928-2.532l.055-.17L3 19.819 3 5a2 2 0 0 1 1.697-1.977l.154-.018L5 3zm.306 18H4.692l-2.249 6h27.114zM19 23v2h-6v-2zm8-18H5l-.001 14h22zM16 7a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"
+            ></path>
+          </svg>
+          <div class="t5nc01k dir dir-ltr">Try an Online Experience</div>
+        </div>
+        <svg
+          viewBox="0 0 32 32"
+          xmlns="http://www.w3.org/2000/svg"
+          aria-hidden="true"
+          role="presentation"
+          focusable="false"
+          style="
+            display: block;
+            fill: none;
+            height: 12px;
+            width: 12px;
+            stroke: currentcolor;
+            stroke-width: 5.33333;
+            overflow: visible;
+          "
+        >
+          <g fill="none">
+            <path
+              d="m12 4 11.2928932 11.2928932c.3905243.3905243.3905243 1.0236893 0 1.4142136l-11.2928932 11.2928932"
+            ></path>
+          </g>
+        </svg></div
+    ></a>
+  </div>
+</div>
                                               </section>
 
 <div class="dir dir-ltr hidden">
