Add service animal modal

--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -14433,7 +14433,7 @@
           aria-describedby="GuestPicker-book_it-form-pets-subtitle">
           <div class="_bc4egv">
             <div id="GuestPicker-book_it-form-pets" class="_1ynrq4v">Pets</div>
-            <div id="GuestPicker-book_it-form-pets-subtitle" class="_1wh7hnv"><button type="button"
+            <div id="GuestPicker-book_it-form-pets-subtitle" class="_1wh7hnv"><button data-modal="#service-animal-modal" type="button"
                 class="_15rpys7s">Bringing a service animal?</button></div>
           </div>
           <div class="_jro6t0">
@@ -34038,6 +34038,75 @@
         <div aria-live="assertive" aria-atomic="true"></div>
       </div>
     </div>
+
+<div id="service-animal-modal" class="hidden" dir="ltr">
+  <div class="_1t0jy5tw"></div>
+  <section>
+    <div class="_vxvq8x" data-testid="modal-container">
+      <div class="_z4lmgp">
+        <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+        <div class="_z4lmgp">
+          <div role="dialog" aria-label="Service animals" aria-modal="true" class="_1ucy1zjv"
+            style="position: relative;">
+            <div class="_pa35zs"><button data-button="close" aria-label="Close" type="button" class="_oda838"><span class="_e296pg"><svg
+                    viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
+                    focusable="false"
+                    style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;">
+                    <path d="m6 6 20 20"></path>
+                    <path d="m26 6-20 20"></path>
+                  </svg></span></button></div>
+            <header class="_1f6ydil">
+              <div class="_1tng6ym"></div>
+              <div class="_9t7ktw"></div>
+              <div class="_rrmdgl"></div>
+            </header>
+            <div class="m12aegvk dir dir-ltr">
+              <div class="_88xxct">
+                <div class="flex-before-after dir dir-ltr">
+                  <div style="--gp-section-max-width:1120px;">
+                    <div data-plugin-in-point-id="WHAT_COUNTS_AS_A_PET_MODAL"
+                      data-section-id="WHAT_COUNTS_AS_A_PET_MODAL">
+                      <div class="i2ckb4z dir dir-ltr">
+                        <div class="_1h6n1zu" role="img" aria-busy="false"
+                          aria-label="A guest with a service animal being greeted by a host"
+                          style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
+                          <img class="_9ofhsl" aria-hidden="true"
+                            alt="A guest with a service animal being greeted by a host" decoding="async"
+                            elementtiming="LCP-target"
+                            src="https://a0.muscache.com/pictures/adafb11b-41e9-49d3-908e-049dfd6934b6.jpg"
+                            data-original-uri="https://a0.muscache.com/pictures/adafb11b-41e9-49d3-908e-049dfd6934b6.jpg"
+                            style="object-fit: cover; vertical-align: bottom;">
+                          <div class="_15p4g025"
+                            style="background-image: url(&quot;https://a0.muscache.com/pictures/adafb11b-41e9-49d3-908e-049dfd6934b6.jpg&quot;); background-size: cover;">
+                          </div>
+                        </div>
+                      </div>
+                      <div class="tve6z7n dir dir-ltr">
+                        <section>
+                          <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                            <div class="t1w965rm dir dir-ltr">Service animals</div>
+                          </h2>
+                        </section><span class="ll4r2nl dir dir-ltr">Service animals aren’t pets, so there’s no need to
+                          add them here.<br><br>Traveling with an emotional support animal? Check out our <span
+                            class="_11waoz2"><a href="/help/article/1869/assistance-animals"
+                              target="_blank">accessibility policy</a></span>.</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+      </div>
+    </div>
+  </section>
+  <div class="_b21f4g">
+    <div aria-live="polite" aria-atomic="true"></div>
+    <div aria-live="assertive" aria-atomic="true"></div>
+  </div>
+</div>
 
     <script src="../assets/js/components.js"></script>
     <script src="../assets/js/pages/products.js" defer></script>
