--- a/listings-product/contact-host-message.html
+++ b/listings-product/contact-host-message.html
@@ -28,7 +28,7 @@
                         <div
                           style="
                             display: contents;
-                            --dls19-brand-color: var(--f-k-smk-x);
+                            --dls19-brand-color: var(--gray-900);
                           "
                         >
                           <div style="--page-shell-max-content-width: 1280px">
