add where youll be modal

--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="../assets/css/global.css" />
     <link rel="stylesheet" href="../assets/css/pages.css" />
+    <link rel="stylesheet" href="../dist/gbertl.css">
     <title>
       9 double bedroom luxury villa with infinity pool - Houses for Rent in
       Malay, Western Visayas, Philippines - Airbnb
@@ -6043,6 +6044,7 @@
                                                       ><button
                                                         type="button"
                                                         class="main-content__agenda-list-btn"
+                                                        data-modal="#where-youll-be-modal"
                                                       >
                                                         <span
                                                           class="_9xiloll"
@@ -34107,6 +34109,123 @@
     <div aria-live="assertive" aria-atomic="true"></div>
   </div>
 </div>
+
+<!-- where youll be modal -->
+<div id="where-youll-be-modal" class="hidden" dir="ltr">
+      <div class="modal__backdrop"></div>
+      <section>
+        <div class="modal__container" data-testid="modal-container" style="padding: 0 !important;">
+          <div class="contents">
+            <div class="container__border-0" aria-hidden="true" tabindex="0"></div>
+            <div class="contents">
+              <div role="dialog" aria-modal="true" class="_ojerypf" style="position: relative">
+                <div class="modal__close">
+                  <button data-button="close" aria-label="Close" type="button" class="btn-close">
+                    <span class="relative"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;"><g fill="none"><path d="m20 28-11.29289322-11.2928932c-.39052429-.3905243-.39052429-1.0236893 0-1.4142136l11.29289322-11.2928932"></path></g></svg></span>
+                  </button>
+                </div>
+                <div class="_1lplc7"></div>
+                <div class="_8uj869">
+                  <div class="_1xi5pac">
+                    <div class="_134cgdm">
+                      <section>
+                        <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                          <div class="_1kxrvd6">Where you’ll be</div>
+                        </h2>
+                        <div class="_50mnu4">
+                          <div>
+                            <div class="_9ns6hl">
+                              <h3 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                Malay, Western Visayas, Philippines
+                              </h3>
+                            </div>
+                            <div
+                            id="where-modal-read-more-text"
+                              style="
+                                line-height: 24px;
+                                overflow: hidden;
+                                text-overflow: ellipsis;
+                                display: -webkit-box;
+                                -webkit-line-clamp: 3;
+                                -webkit-box-orient: vertical;
+                              "
+                            >
+                              <span
+                                ><span class="ll4r2nl dir dir-ltr"
+                                  >We are situated above Diniwid Beach which is at the end of
+                                  White Beach (Station 1 end). We are also less than 10 minutes
+                                  walk from Balinghai Beach which is great for an early morning
+                                  ocean swim. The bars and restaurants of Diniwid Beach are
+                                  close by and White Beach is a 10 minute van ride away.</span
+                                ></span
+                              >
+                            </div>
+                            <button type="button" class="_15rpys7s" id="where-modal-read-more">
+                              <span
+                                class="flex atm_9s_116y0ak atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"
+                                ><span class="dir dir-ltr">read more</span
+                                ><span class="atm_gz_1y44olf dir dir-ltr"
+                                  ><svg
+                                    viewBox="0 0 32 32"
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    aria-hidden="true"
+                                    role="presentation"
+                                    focusable="false"
+                                    style="
+                                      display: block;
+                                      fill: none;
+                                      height: 12px;
+                                      width: 12px;
+                                      stroke: currentcolor;
+                                      stroke-width: 5.33333;
+                                      overflow: visible;
+                                    "
+                                  >
+                                    <g fill="none">
+                                      <path
+                                        d="m12 4 11.2928932 11.2928932c.3905243.3905243.3905243 1.0236893 0 1.4142136l-11.2928932 11.2928932"
+                                      ></path>
+                                    </g></svg></span
+                              ></span>
+                            </button>
+                          </div>
+                        </div>
+                        <div class="_50mnu4">
+                          <div>
+                            <div class="_9ns6hl">
+                              <h3 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                                Getting around
+                              </h3>
+                            </div>
+                            <div style="line-height: 24px">
+                              <span
+                                ><span class="ll4r2nl dir dir-ltr"
+                                  >We have our own van and driver at the guests disposal
+                                  24/7.</span
+                                ></span
+                              >
+                            </div>
+                          </div>
+                        </div>
+                      </section>
+                    </div>
+                    <div class="_1ckg963 hidden block-md">
+                      <img src="../assets/images/map-where-youll-be.png" alt="" style='height: 100%;object-fit:cover;object-position: right;'/>
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+            </div>
+            <div class="container__border-0" aria-hidden="true" tabindex="0"></div>
+          </div>
+        </div>
+      </section>
+      <div class="container__border-0">
+        <div aria-live="polite" aria-atomic="true"></div>
+        <div aria-live="assertive" aria-atomic="true"></div>
+      </div>
+    </div>
 
     <script src="../assets/js/components.js"></script>
     <script src="../assets/js/pages/products.js" defer></script>
