fx no. 4 A adjust ui

--- a/become-a-host/location.html
+++ b/become-a-host/location.html
@@ -285,16 +285,34 @@
                                             </div>
                                           </label>
                                         </div>
-                                        <div
+                                        <!-- <div
                                           id="searchable-address-description"
                                           class="hidden"
                                         >
                                           Navigate forward to access suggested
                                           results
-                                        </div>
+                                        </div> -->
                                       </div>
                                     </div>
                                   </div>
+                                  <ul class="_1p5zqcr" id="autocomplete-results" role="listbox" aria-label="Search suggestions" tabindex="-1">
+                                    <li class="_1ls6jxc" role="option" tabindex="-1" aria-selected="false" id="autocomplete-result-0" data-testid="autocomplete-result-0">
+                                     <div class="_17z6oac">
+                                      <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 16px; width: 16px; fill: currentcolor;">
+                                       <path
+                                        d="m28 7h-8v-3c0-1.103-.897-2-2-2h-14c-1.103 0-2 .897-2 2v24c0 1.103.897 2 2 2h24c1.103 0 2-.897 2-2v-19c0-1.103-.897-2-2-2zm-20 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm0 4a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm0 4a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 13h-8v-5c0-1.103.897-2 2-2h4c1.103 0 2 .897 2 2zm-1-11a1 1 0 1 1 0-2 1 1 0 0 1 0 2zm0-4a1 1 0 1 1 0-2 1 1 0 0 1 0 2zm0-4a1 1 0 1 1 0-2 1 1 0 0 1 0 2zm8 19h-2v-19h2zm4-11a1 1 0 1 1 0-2 1 1 0 0 1 0 2zm0-4a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"
+                                       ></path>
+                                      </svg>
+                                     </div>
+                                     <div>
+                                      <div class="_4gelgl">E1</div>
+                                      <div class="_1ir6ymk">A. Bonifacio, Quezon City, Metro Manila</div>
+                                     </div>
+                                    </li>
+                                    <li class="_k6xoo0" role="option" tabindex="-1" aria-selected="false" id="autocomplete-result-1" loggingid="lys.location.enterAddressManually" eventdataschema="ListYourSpaceStepActionEvent" eventdata="[object Object]">
+                                     Enter address manually
+                                    </li>
+                                  </ul>
                                 </div>
                               </div>
                             </div>
