--- a/become-a-host/floor-plan.html
+++ b/become-a-host/floor-plan.html
@@ -561,6 +561,28 @@
                               </div>
                             </div>
                           </div>
+                          <div class="_fimhxsp" style="animation-delay: 584.847ms;">
+                            <div class="_1lpqz29">Are any of these bathrooms private?</div>
+                            <div class="_gb49jh" role="radiogroup" style="animation-delay: 584.847ms;">
+                             <div id="radio-input--0" aria-disabled="false" class="rcem0st uyl8mnh dir dir-ltr">
+                              <label for="radio-input--0-row-radio-button" class="_13xlah4">
+                               <div class="_jro6t0">
+                                <div class="_7ytxmo"><input aria-labelledby="radio-input--0-row-title" aria-describedby="radio-input--0-row-subtitle" id="radio-input--0-row-radio-button" class="_83s1a2" type="radio" value="private" /></div>
+                                <div class="_gfomxi"><div id="radio-input--0-row-title" class="_gw4xx4">Yes</div></div>
+                               </div>
+                              </label>
+                             </div>
+                             <div id="radio-input--1" aria-disabled="false" class="rcem0st uyl8mnh dir dir-ltr">
+                              <label for="radio-input--1-row-radio-button" class="_13xlah4">
+                               <div class="_jro6t0">
+                                <div class="_7ytxmo"><input aria-labelledby="radio-input--1-row-title" aria-describedby="radio-input--1-row-subtitle" id="radio-input--1-row-radio-button" class="_83s1a2" type="radio" value="shared" /></div>
+                                <div class="_gfomxi"><div id="radio-input--1-row-title" class="_gw4xx4">No, they're all shared</div></div>
+                               </div>
+                              </label>
+                             </div>
+                            </div>
+                          </div>
+
                         </div>
                       </div>
                     </div>
