fx no. 8 A - add modal

--- a/become-a-host/price.html
+++ b/become-a-host/price.html
@@ -493,6 +493,7 @@
                                 aria-label="Help understanding suggested prices"
                                 type="button"
                                 class="btn-close"
+                                id="open-modal-price-help"
                               >
                                 <span class="relative"
                                   ><svg
@@ -1239,6 +1240,49 @@
        <div aria-live="assertive" aria-atomic="true"></div>
       </div>
     </div>
+
+    <div dir="ltr">
+      <div class="_1t0jy5tw hidden price-exit-backdrop"></div>
+      <section>
+       <div class="_g2ext hidden price-help-modal-container" data-testid="modal-container">
+        <div class="_z4lmgp">
+         <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+         <div class="_z4lmgp">
+          <div role="dialog" aria-label="How suggested prices are calculated" aria-modal="true" class="modal-price-help _1m9khubh" style="position: relative;">
+           <div class="_1wv4knt">
+            <button aria-label="Close" type="button" class="_oda838" id="close-modal-price-help">
+             <span class="_e296pg">
+              <svg
+               viewBox="0 0 32 32"
+               xmlns="http://www.w3.org/2000/svg"
+               aria-hidden="true"
+               role="presentation"
+               focusable="false"
+               style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;"
+              >
+               <path d="m6 6 20 20"></path>
+               <path d="m26 6-20 20"></path>
+              </svg>
+             </span>
+            </button>
+           </div>
+           <div class="_12kfhdn">
+            <div class="_6tsdpm"><span class="ll4r2nl dir dir-ltr">Suggested prices are based on your listing’s location and amenities, as well as nearby prices and demand. You choose your price, and you can adjust it at any time.</span></div>
+           </div>
+           <footer class="_zgc1p6">
+            <div class="_lmgcah"><button type="button" class="_1lerwp6l">Done</button></div>
+           </footer>
+          </div>
+         </div>
+         <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+        </div>
+       </div>
+      </section>
+      <div class="_b21f4g">
+       <div aria-live="polite" aria-atomic="true"></div>
+       <div aria-live="assertive" aria-atomic="true"></div>
+      </div>
+     </div>
     
   </body>
   <script src="../assets/js/pages/become-a-host.js" defer></script>
