--- a/become-a-host/legal.html
+++ b/become-a-host/legal.html
@@ -181,6 +181,7 @@
                                   aria-label="Help with safety and property info"
                                   type="button"
                                   class="btn-close"
+                                  id="open-modal-question"
                                 >
                                   <span class="relative"
                                     ><svg
@@ -1153,6 +1154,64 @@
        <div aria-live="assertive" aria-atomic="true"></div>
       </div>
     </div>
+
+    <div dir="ltr">
+      <div class="_1t0jy5tw hidden question-backdrop"></div>
+      <section>
+       <div class="_g2ext hidden question-modal-container" data-testid="modal-container">
+        <div class="_z4lmgp">
+         <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+         <div class="_z4lmgp">
+          <div role="dialog" aria-label="More details" aria-modal="true" class="modal-question _ewwxwe" style="position: relative;">
+           <div class="_1wv4knt">
+            <button aria-label="Close" type="button" class="_oda838" id="close-modal-question">
+             <span class="_e296pg">
+              <svg
+               viewBox="0 0 32 32"
+               xmlns="http://www.w3.org/2000/svg"
+               aria-hidden="true"
+               role="presentation"
+               focusable="false"
+               style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;"
+              >
+               <path d="m6 6 20 20"></path>
+               <path d="m26 6-20 20"></path>
+              </svg>
+             </span>
+            </button>
+           </div>
+           <div class="_12kfhdn">
+            <div class="_6tsdpm">
+             <span class="ll4r2nl dir dir-ltr">
+              <span class="_1di55y9">Security camera(s)</span><br />
+              Hosts are required to disclose all security cameras and other recording devices in their listings. Intentionally concealed recording devices, or devices that observe the interior of bedrooms and bathrooms, are prohibited.
+              <span class="_11waoz2"><a href="https://www.airbnb.com/help/article/887/what-are-airbnbs-rules-about-security-cameras-and-other-recording-devices-in-listings?locale=en&amp;country_override=PH" target="_blank">Learn more</a></span>
+              <br />
+              <br />
+              <span class="_1di55y9">Weapons</span><br />
+              All weapons at a listing must be properly disclosed, stored and secured.
+              <span class="_11waoz2"><a href="https://www.airbnb.com/help/article/1529/what-are-airbnbs-rules-about-weapons-in-a-listing?locale=en&amp;country_override=PH" target="_blank">Learn more</a></span><br />
+              <br />
+              <span class="_1di55y9">Dangerous animals</span><br />
+              Hosts should not keep a potentially dangerous animal (one that’s capable of causing serious harm to humans or other animals) in a listing without properly disclosing its presence and securing it in a safe and secure accommodation.
+              <span class="_11waoz2"><a href="https://www.airbnb.com/help/article/2135/what-are-airbnbs-rules-about-potentially-dangerous-animals?locale=en&amp;country_override=PH" target="_blank">Learn more</a></span>
+             </span>
+            </div>
+           </div>
+           <footer class="_zgc1p6">
+            <div class="_lmgcah"><button type="button" class="_1lerwp6l">Done</button></div>
+           </footer>
+          </div>
+         </div>
+         <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+        </div>
+       </div>
+      </section>
+      <div class="_b21f4g">
+       <div aria-live="polite" aria-atomic="true"></div>
+       <div aria-live="assertive" aria-atomic="true"></div>
+      </div>
+     </div>
 
   </body>
   <script src="../assets/js/pages/become-a-host.js" defer></script>
