--- a/become-a-host/photos.html
+++ b/become-a-host/photos.html
@@ -702,6 +702,13 @@
                                                                     ></span>
                                                                   </button>
                                                                 </div>
+                                                                <div class="_olsjb9v" tabindex="-1">
+                                                                  <button type="button" class="_14tt8lmp" aria-label="Edit" theme="[object Object]"><div class="_q40c6s">Edit</div></button>
+                                                                  <button type="button" class="_14tt8lmp" aria-label="Move photo position backward" theme="[object Object]"><div class="_q40c6s">Move backward</div></button>
+                                                                  <button type="button" class="_14tt8lmp" aria-label="Move photo position forward" theme="[object Object]"><div class="_q40c6s">Move forward</div></button>
+                                                                  <button type="button" class="_14tt8lmp" aria-label="Make cover photo" theme="[object Object]"><div class="_q40c6s">Make cover photo</div></button>
+                                                                  <button type="button" class="_14tt8lmp" aria-label="Delete" theme="[object Object]"><div class="_q40c6s">Delete</div></button>
+                                                                </div>
                                                               </div>
                                                             </div>
                                                           </div>
